// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Aave V4 Hub Scenarios > Given a user who wants to know assets in a hub > When fetching assets in a hub > Then it should return the expected data for assets in a hub 1`] = `
{
  "__typename": "HubAsset",
  "assetId": "0",
  "hub": Any<Object>,
  "settings": {
    "__typename": "HubAssetSettings",
    "feeReceiver": "0x4B643A17BB9Bc4186617fD4F29A75Ae4350F6e53",
    "irStrategy": "0xa5ea1c565fd011897233CA97b610B3f167253BBB",
    "liquidityFee": {
      "__typename": "PercentValue",
      "decimals": 4,
      "formatted": "10.00",
      "raw": 1000n,
      "value": "0.10",
    },
    "reinvestmentController": null,
  },
  "summary": Any<Object>,
  "underlying": {
    "__typename": "Erc20Token",
    "address": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
    "chain": {
      "__typename": "Chain",
      "chainId": 1,
      "explorerUrl": "https://etherscan.io",
      "icon": "https://statics.aave.com/ethereum.svg",
      "isTestnet": false,
      "name": "Ethereum",
      "nativeInfo": {
        "__typename": "TokenInfo",
        "decimals": 18,
        "icon": "https://statics.aave.com/ethereum.svg",
        "name": "Ether",
        "symbol": "ETH",
      },
      "nativeWrappedToken": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
    },
    "info": {
      "__typename": "TokenInfo",
      "decimals": 6,
      "icon": "https://token-logos.family.co/asset?id=1:0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48&token=USDC",
      "name": "USD Coin",
      "symbol": "USDC",
    },
    "isWrappedNativeToken": false,
    "permitSupported": true,
  },
  "userState": null,
}
`;

exports[`Aave V4 Hub Scenarios > Given a user who wants to know assets in a hub > When fetching assets in a hub > Then it should return the expected data for assets in a hub 2`] = `
{
  "__typename": "HubAsset",
  "assetId": "1",
  "hub": Any<Object>,
  "settings": {
    "__typename": "HubAssetSettings",
    "feeReceiver": "0x4B643A17BB9Bc4186617fD4F29A75Ae4350F6e53",
    "irStrategy": "0xa5ea1c565fd011897233CA97b610B3f167253BBB",
    "liquidityFee": {
      "__typename": "PercentValue",
      "decimals": 4,
      "formatted": "10.00",
      "raw": 1000n,
      "value": "0.10",
    },
    "reinvestmentController": null,
  },
  "summary": Any<Object>,
  "underlying": {
    "__typename": "Erc20Token",
    "address": "0x9D39A5DE30e57443BfF2A8307A4256c8797A3497",
    "chain": {
      "__typename": "Chain",
      "chainId": 1,
      "explorerUrl": "https://etherscan.io",
      "icon": "https://statics.aave.com/ethereum.svg",
      "isTestnet": false,
      "name": "Ethereum",
      "nativeInfo": {
        "__typename": "TokenInfo",
        "decimals": 18,
        "icon": "https://statics.aave.com/ethereum.svg",
        "name": "Ether",
        "symbol": "ETH",
      },
      "nativeWrappedToken": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
    },
    "info": {
      "__typename": "TokenInfo",
      "decimals": 18,
      "icon": "https://token-logos.family.co/asset?id=1:0x9D39A5DE30e57443BfF2A8307A4256c8797A3497&token=sUSDe",
      "name": "Staked USDe",
      "symbol": "sUSDe",
    },
    "isWrappedNativeToken": false,
    "permitSupported": true,
  },
  "userState": null,
}
`;

exports[`Aave V4 Hub Scenarios > Given a user who wants to list available hubs > When fetching hubs by chain ID(s) > Then it should return the expected data for each hub 1`] = `
{
  "__typename": "Hub",
  "address": "0x4BB8658261CCF575Cb6148a257BE34b36D3D057f",
  "chain": {
    "__typename": "Chain",
    "chainId": 1,
    "explorerUrl": "https://etherscan.io",
    "icon": "https://statics.aave.com/ethereum.svg",
    "isTestnet": false,
    "name": "Ethereum",
    "nativeInfo": {
      "__typename": "TokenInfo",
      "decimals": 18,
      "icon": "https://statics.aave.com/ethereum.svg",
      "name": "Ether",
      "symbol": "ETH",
    },
    "nativeWrappedToken": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
  },
  "name": "ISO Stable",
  "summary": Any<Object>,
}
`;

exports[`Aave V4 Hub Scenarios > Given a user who wants to list available hubs > When fetching hubs by chain ID(s) > Then it should return the expected data for each hub 2`] = `
{
  "__typename": "Hub",
  "address": "0x7E7c3EDCa4D39D0aFBD468Dec89cdEaF0AC770d3",
  "chain": {
    "__typename": "Chain",
    "chainId": 1,
    "explorerUrl": "https://etherscan.io",
    "icon": "https://statics.aave.com/ethereum.svg",
    "isTestnet": false,
    "name": "Ethereum",
    "nativeInfo": {
      "__typename": "TokenInfo",
      "decimals": 18,
      "icon": "https://statics.aave.com/ethereum.svg",
      "name": "Ether",
      "symbol": "ETH",
    },
    "nativeWrappedToken": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
  },
  "name": "Core",
  "summary": Any<Object>,
}
`;

exports[`Aave V4 Hub Scenarios > Given a user who wants to list available hubs > When fetching hubs by chain ID(s) > Then it should return the expected data for each hub 3`] = `
{
  "__typename": "Hub",
  "address": "0xA5f18dFE4f0380b6C40411D7Ddb2c04034276805",
  "chain": {
    "__typename": "Chain",
    "chainId": 1,
    "explorerUrl": "https://etherscan.io",
    "icon": "https://statics.aave.com/ethereum.svg",
    "isTestnet": false,
    "name": "Ethereum",
    "nativeInfo": {
      "__typename": "TokenInfo",
      "decimals": 18,
      "icon": "https://statics.aave.com/ethereum.svg",
      "name": "Ether",
      "symbol": "ETH",
    },
    "nativeWrappedToken": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
  },
  "name": "ISO Gov",
  "summary": Any<Object>,
}
`;
